kustomize/overlays/aws/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resilience-lab
spec:
  replicas: 2
